--- a/crud/src/main/resources/application.properties
+++ b/crud/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=crud
+server.port=9900
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/abhispring?useSSL=true
+spring.datasource.username=root
+spring.datasource.password=root@123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+# Redis Configuration
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.cache.type=redis
+
+management.endpoints.web.exposure.include=health,metrics,prometheus
+management.metrics.cache.instrument=true
